feat(CP): remove bottom tooltip
remove bottom tooltip class from 'Resume Playback from Last Position' option

--- a/control/settings/templates/home.html
+++ b/control/settings/templates/home.html
@@ -80,7 +80,7 @@
 <div class="row margin-bottom-twenty flex flex-align-center">
     <label class="tooltip-container col-md-4">Resume Playback from Last Position
         <span class="btn-info-icon btn-primary">
-            <span class="cp-tooltip bottom-cp-tooltip">
+            <span class="cp-tooltip">
                 Automatically resume media playback from where the user left off upon returning to the app. Applies
                 across all Media Center Manual instances.
             </span>
