feat(widget): handle play same audio url with different tracks
handle play same audio url with different tracks, and cp sync for the design and image carousle

--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -742,6 +742,8 @@ html[browser="Firefox"] .third-layout .list-layout .list-item-media .list-media-
 	max-height: 100%;
 	vertical-align: middle;
 	border-radius: 4px;
+	height: 100%;
+	object-fit: cover;
 }
 
 .third-layout .list-layout .list-item-media .list-media-holder .main-icon {
