--- a/widget/assets/css/media.css
+++ b/widget/assets/css/media.css
@@ -94,6 +94,7 @@ h5 {
     position: fixed;
     width: 100%;
     height: 100%;
+    background-color: #000000de;
 }
 
 .holder.now-playing .media-center-plugin {
@@ -648,36 +649,20 @@ videogular .iconButton,
     padding-right: 0.3rem;
 }
 
-/* .second-layout .people-holder {
-    display: flex;
-}
-
-.second-layout .people-media img {
-    flex-shrink: 0;
-    width: 35%;
-    padding: .75rem;
-}
-
-.second-layout .people-info p {
-    font-size: .875rem;
-    text-align: left;
-} */
-
 .now-playing-backgroundImage {
     -o-filter: blur(10px) brightness(0.4);
     -moz-filter: blur(10px) brightness(0.4);
     -webkit-filter: blur(10px) brightness(0.4);
     filter: blur(10px) brightness(0.4);
     position: absolute;
-    top: -5%;
-    left: -5%;
     -o-background-size: cover;
     -moz-background-size: cover;
     -webkit-background-size: cover;
     background-size: cover !important;
-    height: 110%;
-    width: 110%;
-    z-index: 0;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
 }
 
 .glyphicon-option-horizontal {
