--- a/widget/templates/layouts/video-player.html
+++ b/widget/templates/layouts/video-player.html
@@ -1,64 +1,3 @@
-<div ng-style="WidgetMedia.fullScreen == false && {height: (WidgetMedia.deviceWidth*9)/16}" ng-if="WidgetMedia.item.data.videoUrl" ng-show="WidgetMedia.showVideo" class="videogular-container">
-    <img src="../../../styles/media/holder-16x9.gif"
-        ng-if="WidgetMedia.loadingVideo">
-    <videogular id="videogularElement"
-                vg-player-ready="WidgetMedia.onPlayerReady($API)"
-                vg-change-source="WidgetMedia.sourceChanged($source)"
-                vg-theme="WidgetMedia.videoPlayerConfig.theme.url"
-                vg-update-state="onVideoStateChange($state)"
-                vg-can-play="WidgetMedia.videoLoaded()"
-                vg-complete="playNextItem()"
-                vg-auto-play="autoPlay"
-                >
-            <vg-media
-                vg-youtube
-                vg-native-controls="false"
-                vg-src="WidgetMedia.videoPlayerConfig.sources"
-                vg-tracks="WidgetMedia.videoPlayerConfig.tracks"
-                ng-show="!WidgetMedia.loadingVideo"
-                ng-if="WidgetMedia.videoPlayerConfig.videoType === 'youtube'"></vg-media>
-            <vg-media
-                vg-vimeo
-                vg-native-controls="false"
-                vg-src="WidgetMedia.videoPlayerConfig.sources"
-                vg-tracks="WidgetMedia.videoPlayerConfig.tracks"
-                ng-show="!WidgetMedia.loadingVideo"
-                ng-if="WidgetMedia.videoPlayerConfig.videoType === 'vimeo'"></vg-media>
-            <vg-media
-                vg-native-controls="false"
-                vg-src="WidgetMedia.videoPlayerConfig.sources"
-                vg-tracks="WidgetMedia.videoPlayerConfig.tracks"
-                ng-show="!WidgetMedia.loadingVideo"
-                ng-if="WidgetMedia.videoPlayerConfig.videoType !== 'vimeo' && WidgetMedia.videoPlayerConfig.videoType !== 'youtube'"></vg-media>
-    
-
-        <vg-controls ng-if="WidgetMedia.item.data.videoUrl" vg-autohide="false" ng-show="!WidgetMedia.loadingVideo" id="vg-controls">
-            <div class="prev-item-btn" ng-click="playPrevItem()">
-                <button class="iconButton">
-                    <i class="glyphicon glyphicon-step-backward"></i>
-                </button>
-            </div>
-            <vg-play-pause-button class="vid-play-pause-btn" ng-show="!WidgetMedia.loadingVideo"></vg-play-pause-button>
-            <div class="next-item-btn" ng-click="playNextItem(true)">
-                <button class="iconButton">
-                    <i class="glyphicon glyphicon-step-forward"></i>
-                </button>
-            </div>
-
-            <div class="empty-space"></div>
-            <vg-scrub-bar>
-                <vg-scrub-bar-current-time></vg-scrub-bar-current-time>
-            </vg-scrub-bar>
-            <div class="empty-space"></div>
-            <vg-time-display class="vid-time">{{ timeLeft | date:'mm:ss':'+0000' | timeCorrect }}</vg-time-display>
-
-            <vg-volume class="volume-btn">
-                <vg-mute-button></vg-mute-button>
-                <vg-volume-bar></vg-volume-bar>
-            </vg-volume>
-            <vg-playback-button vgFor="videogularElement" [playbackValues]="[ '1.0', '2.0', '4.0' ]"></vg-playback-button>
-            <vg-fullscreen-button class="fullscreen-btn"></vg-fullscreen-button>
-        </vg-controls>
-        <vg-overlay-play ng-class="{'hidden': videoAlreadyPlayed()}" id="vg-overlay-play"></vg-overlay-play>
-    </videogular>
+<div ng-style="WidgetMedia.fullScreen == false && {height: (WidgetMedia.deviceWidth*9)/16}" ng-if="WidgetMedia.item.data.videoUrl" ng-show="WidgetMedia.showVideo" class="video-js-container">
+    <div ng-init="WidgetMedia.initVideoPlayer()" id="videoContainer"></div>
 </div>
