fix(widget): resize loading video image
resize loading video image to fill video container

--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -1554,5 +1554,7 @@ input[type="checkbox"]:checked+.subcategory-label.minus::before {
 	top: 0;
 	left: 0;
 	right: 0;
+	bottom: 0;
+	max-height: unset !important;
 	z-index: 100;
 }
