feat(audio image): add new background image input
add new audio background image input

--- a/control/content/assets/css/control.content.css
+++ b/control/content/assets/css/control.content.css
@@ -592,3 +592,9 @@ Style for loader
 .bottom-actions {
     z-index: 1000;
 }
+
+.screens .screen a span.add-icon {
+ display: flex;
+ align-items: center;
+ justify-content: center;
+}
