--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -5,9 +5,9 @@
     <div class="media-center-plugin" ng-if="!(NowPlaying.openMoreInfo || NowPlaying.openSettings)">
         <div class="media-holder">
             <div class="media-inner text-center">
-                <img ng-if="(NowPlaying.currentTrack.topImage || NowPlaying.currentTrack.image) && NowPlaying.isOnline" 
-                    ng-src="{{(NowPlaying.currentTrack.topImage ? NowPlaying.currentTrack.topImage : NowPlaying.currentTrack.image) | resizeImage : 400:400 }}" alt="{{NowPlaying.currentTrack.title}} top image">
-                <img ng-if="(NowPlaying.currentTrack.topImage || NowPlaying.currentTrack.image) && !NowPlaying.isOnline" ng-src="{{NowPlaying.currentTrack.topImage ? NowPlaying.currentTrack.topImage : NowPlaying.currentTrack.image}}" alt="{{NowPlaying.currentTrack.title}} top image">
+                <img ng-if="(NowPlaying.currentTrack.image || NowPlaying.currentTrack.topImage) && NowPlaying.isOnline"
+                    ng-src="{{(NowPlaying.currentTrack.image ? NowPlaying.currentTrack.image : NowPlaying.currentTrack.topImage) | resizeImage : 400:400 }}" alt="{{NowPlaying.currentTrack.title}} top image">
+                <img ng-if="(NowPlaying.currentTrack.image || NowPlaying.currentTrack.topImage) && !NowPlaying.isOnline" ng-src="{{NowPlaying.currentTrack.image ? NowPlaying.currentTrack.image : NowPlaying.currentTrack.topImage}}" alt="{{NowPlaying.currentTrack.title}} top image">
                 <img ng-if="!NowPlaying.currentTrack.topImage && !NowPlaying.currentTrack.image" src="./assets/images/now-playing.png" alt="top image">
             </div>
         </div>
@@ -42,14 +42,14 @@
                         <span>{{"--:--"}}</span>
                     </div>
                 </div>
-                
+
             </div>
         </div>
         <div class="media-player-btns">
             <span class="icon" ng-class="(((NowPlaying.currentTrack.isAudioFromPluginList && !autoPlay) || (!NowPlaying.currentTrack.isAudioFromPluginList && globalPlaylist)) || !NowPlaying.isAudioInitialized) && 'disabled'" ng-click="NowPlaying.shufflePlaylist()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                     <g opacity="0.9" clip-path="url(#clip0_1431_2874)">
-                        <path d="M10.59 9.17L5.41 4L4 5.41L9.17 10.58L10.59 9.17ZM14.5 4L16.54 6.04L4 18.59L5.41 20L17.96 7.46L20 9.5V4H14.5ZM14.83 13.41L13.42 14.82L16.55 17.95L14.5 20H20V14.5L17.96 16.54L14.83 13.41Z" 
+                        <path d="M10.59 9.17L5.41 4L4 5.41L9.17 10.58L10.59 9.17ZM14.5 4L16.54 6.04L4 18.59L5.41 20L17.96 7.46L20 9.5V4H14.5ZM14.83 13.41L13.42 14.82L16.55 17.95L14.5 20H20V14.5L17.96 16.54L14.83 13.41Z"
                         ng-class="((NowPlaying.currentTrack.isAudioFromPluginList && NowPlaying.settings.shufflePluginList) || (!NowPlaying.currentTrack.isAudioFromPluginList && NowPlaying.settings.shufflePlaylist && !globalPlaylist)) ? 'active' : 'not-active'"/>
                     </g>
                     <defs>
@@ -63,7 +63,7 @@
                     <span class="shuffle-indicator-text" ng-if="!NowPlaying.currentTrack.isAudioFromPluginList">{{NowPlaying.shufflePlaylistItemsIndicator ? NowPlaying.shufflePlaylistItemsIndicator.slice(0,1) : 'P'}}</span>
                 </span>
             </span>
-                
+
             <div class="player-btns">
                 <span ng-if="!autoPlay" class="btn btn-icon" ng-click="NowPlaying.backward()"><img
                         src="assets/css/icons/ic_fast_rewind.svg" alt=""></span>
@@ -85,7 +85,7 @@
             <span ng-class="((NowPlaying.currentTrack.isAudioFromPluginList || (!NowPlaying.currentTrack.isAudioFromPluginList && globalPlaylist)) || !NowPlaying.isAudioInitialized) && 'disabled'" class="icon icon-sm" ng-click="NowPlaying.loopPlaylist()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                     <g opacity="0.9" clip-path="url(#clip0_1431_2881)">
-                        <path d="M7 7H17V10L21 6L17 2V5H5V11H7V7ZM17 17H7V14L3 18L7 22V19H19V13H17V17Z" 
+                        <path d="M7 7H17V10L21 6L17 2V5H5V11H7V7ZM17 17H7V14L3 18L7 22V19H19V13H17V17Z"
                         ng-class="(!NowPlaying.currentTrack.isAudioFromPluginList && NowPlaying.settings && NowPlaying.settings.loopPlaylist && !globalPlaylist) ? 'active' : 'not-active'">
                     </g>
                     <defs>
@@ -156,9 +156,9 @@
             <div class="media-player-more-info">
                 <div class="media-holder margin-top-thirty">
                     <div class="media-inner text-center">
-                        <img ng-if="(NowPlaying.currentTrack.topImage || NowPlaying.currentTrack.image) && NowPlaying.isOnline" 
-                            ng-src="{{(NowPlaying.currentTrack.topImage ? NowPlaying.currentTrack.topImage : NowPlaying.currentTrack.image) | resizeImage : 400:400 }}" alt="{{NowPlaying.currentTrack.title}} top image">
-                        <img ng-if="(NowPlaying.currentTrack.topImage || NowPlaying.currentTrack.image) && !NowPlaying.isOnline" ng-src="{{NowPlaying.currentTrack.topImage ? NowPlaying.currentTrack.topImage : NowPlaying.currentTrack.image}}" alt="{{NowPlaying.currentTrack.title}} top image">
+                        <img ng-if="(NowPlaying.currentTrack.image || NowPlaying.currentTrack.topImage) && NowPlaying.isOnline"
+                            ng-src="{{(NowPlaying.currentTrack.image ? NowPlaying.currentTrack.image : NowPlaying.currentTrack.topImage) | resizeImage : 400:400 }}" alt="{{NowPlaying.currentTrack.title}} top image">
+                        <img ng-if="(NowPlaying.currentTrack.image || NowPlaying.currentTrack.topImage) && !NowPlaying.isOnline" ng-src="{{NowPlaying.currentTrack.image ? NowPlaying.currentTrack.image : NowPlaying.currentTrack.topImage}}" alt="{{NowPlaying.currentTrack.title}} top image">
                         <img ng-if="!NowPlaying.currentTrack.topImage && !NowPlaying.currentTrack.image" src="./assets/images/now-playing.png" alt="top image">
                     </div>
                 </div>
