--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -11,7 +11,8 @@
             </div>
             <div infinite-scroll="ContentMedia.getMore()" infinite-scroll-distance="0"
                 data-infinite-container="#modalBody" infinite-scroll-disabled="ContentMedia.noMore">
-                <div class="empty-state dialog-empty-state" ng-if="!ContentMedia.allCategories || !ContentMedia.allCategories.length">
+                <div class="empty-state dialog-empty-state"
+                    ng-if="!ContentMedia.allCategories || !ContentMedia.allCategories.length">
                     <h5 ng-if="!ContentMedia.isBusy">You haven't added anything yet</h5>
                     <h5 ng-if="ContentMedia.isBusy">Loading...</h5>
                 </div>
@@ -29,7 +30,7 @@
                                         ng-class="category.data.icon">
                                     </div>
                                     <div ng-if="!category.data.icon" class="add-icon">
-                                        <img src="../../../../styles/media/holder-1x1.png" >
+                                        <img src="../../../../styles/media/holder-1x1.png">
                                     </div>
                                 </div>
 
@@ -77,17 +78,23 @@
     <h1>Item Content Details</h1>
 
     <div class="row flex thumbnail-image-selector">
-        <div class="col-md-3">
-            <span>Thumbnail Image</span>
-        </div>
+        <label class="tooltip-container col-md-3">Media Thumbnail
+            <span class="btn-info-icon btn-primary">
+                <span class="cp-tooltip">
+                    Upload a thumbnail image that will appear in the items list and as a fallback in the playback bar if
+                    no media image is provided.
+                </span>
+            </span>
+        </label>
         <div class="col-md-9 main ">
             <div class="screens clearfix margin-bottom-zero">
                 <div class="screen pull-left">
                     <a class="border-grey border-radius-three default-background-hover"
-                        style="width: 122px; height: 90px; display: flex; align-items: center; justify-content: center;"
+                        style="width: 122px; height: 69px; display: flex; align-items: center; justify-content: center;"
                         ng-click="ContentMedia.addListImage()">
                         <span ng-if="!ContentMedia.item.data.topImage" class="add-icon" style="height: 85%;">+</span>
-                        <img ng-if="ContentMedia.item.data.topImage" ng-src="{{ContentMedia.item.data.topImage | resizeImage : 122:90}}">
+                        <img ng-if="ContentMedia.item.data.topImage"
+                            ng-src="{{ContentMedia.item.data.topImage | cropImage : 122:69}}">
                     </a>
                     <span ng-if="ContentMedia.item.data.topImage"
                         class="icon btn-delete-icon btn-danger transition-third"
@@ -188,9 +195,15 @@
     <hr class="none">
 
     <div class="row flex audio-image-selector">
-        <div class="col-md-3">
-            <span>Audio Image</span>
-        </div>
+        <label class="tooltip-container col-md-3">Media Image
+            <span class="btn-info-icon btn-primary">
+                <span class="cp-tooltip">
+                    Upload a high-quality image that will be displayed in the audio item details and as the primary
+                    image in
+                    the playback bar for audio.
+                </span>
+            </span>
+        </label>
         <div class="col-md-9 main ">
             <div class="screens clearfix margin-bottom-zero">
                 <div class="screen pull-left">
@@ -198,10 +211,10 @@
                         style="width: 122px; height: 122px; display: flex; align-items: center; justify-content: center;"
                         ng-click="ContentMedia.addAudioImage()">
                         <span ng-if="!ContentMedia.item.data.image" class="add-icon" style="height: 65%;">+</span>
-                        <img ng-if="ContentMedia.item.data.image" ng-src="{{ContentMedia.item.data.image | resizeImage : 122:90}}">
+                        <img ng-if="ContentMedia.item.data.image"
+                            ng-src="{{ContentMedia.item.data.image | cropImage : 122:122}}">
                     </a>
-                    <span ng-if="ContentMedia.item.data.image"
-                        class="icon btn-delete-icon btn-danger transition-third"
+                    <span ng-if="ContentMedia.item.data.image" class="icon btn-delete-icon btn-danger transition-third"
                         ng-click="ContentMedia.removeAudioImage()"></span>
                 </div>
             </div>
@@ -211,17 +224,23 @@
 
     <hr class="none">
     <div class="row flex audio-image-selector">
-        <div class="col-md-3">
-            <span>Audio Background Image</span>
-        </div>
+        <label class="tooltip-container col-md-3">Media Background
+            <span class="btn-info-icon btn-primary">
+                <span class="cp-tooltip">
+                    Upload a background image that will be displayed behind the audio player while the item is playing.
+                </span>
+            </span>
+        </label>
         <div class="col-md-9 main ">
             <div class="screens clearfix margin-bottom-zero">
                 <div class="screen pull-left">
                     <a class="border-grey border-radius-three default-background-hover"
-                        style="width: 122px; height: 244px; display: flex; align-items: center; justify-content: center;"
+                        style="width: 122px; height: 264px; display: flex; align-items: center; justify-content: center;"
                         ng-click="ContentMedia.addAudioBackgroundImage()">
-                        <span ng-if="!ContentMedia.item.data.backgroundImage" class="add-icon" style="height: 65%;">+</span>
-                        <img ng-if="ContentMedia.item.data.backgroundImage" ng-src="{{ContentMedia.item.data.backgroundImage | resizeImage : 122:244}}">
+                        <span ng-if="!ContentMedia.item.data.backgroundImage" class="add-icon"
+                            style="height: 65%;">+</span>
+                        <img ng-if="ContentMedia.item.data.backgroundImage"
+                            ng-src="{{ContentMedia.item.data.backgroundImage | cropImage : 122:264}}">
                     </a>
                     <span ng-if="ContentMedia.item.data.backgroundImage"
                         class="icon btn-delete-icon btn-danger transition-third"
@@ -293,7 +312,8 @@
                                 <span ng-if="!$last">, </span></span>
                     </div>
                 </div>
-                <div class="empty-state small-empty-state" ng-if="!ContentMedia.assignedCategories || ContentMedia.assignedCategories.length == 0">
+                <div class="empty-state small-empty-state"
+                    ng-if="!ContentMedia.assignedCategories || ContentMedia.assignedCategories.length == 0">
                     <h5>No Categories Selected.</h5>
                 </div>
             </div>
