--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -81,8 +81,7 @@
         <label class="tooltip-container col-md-3">Media Thumbnail
             <span class="btn-info-icon btn-primary">
                 <span class="cp-tooltip">
-                    Upload a thumbnail image that will appear in the items list and as a fallback in the playback bar if
-                    no media image is provided.
+                    Upload a thumbnail image that will appear in the items list and item details.
                 </span>
             </span>
         </label>
@@ -195,12 +194,10 @@
     <hr class="none">
 
     <div class="row flex audio-image-selector">
-        <label class="tooltip-container col-md-3">Media Image
+        <label class="tooltip-container col-md-3">Audio Image
             <span class="btn-info-icon btn-primary">
                 <span class="cp-tooltip">
-                    Upload a high-quality image that will be displayed in the audio item details and as the primary
-                    image in
-                    the playback bar for audio.
+                    Upload a high-quality image that will be displayed in the audio player and playback bar..
                 </span>
             </span>
         </label>
@@ -227,7 +224,7 @@
         <label class="tooltip-container col-md-3">Media Background
             <span class="btn-info-icon btn-primary">
                 <span class="cp-tooltip">
-                    Upload a background image that will be displayed behind the audio player while the item is playing.
+                    Upload a background image that will be displayed as a blurred background in the audio player.
                 </span>
             </span>
         </label>
