update plugin name

--- a/control/settings/templates/home.html
+++ b/control/settings/templates/home.html
@@ -82,7 +82,7 @@
         <span class="btn-info-icon btn-primary">
             <span class="cp-tooltip">
                 Automatically resume media playback from where the user left off upon returning to the app. Applies
-                across all Media Center Manual instances.
+                across all Media Center instances.
             </span>
         </span>
     </label>
@@ -140,7 +140,7 @@
     <label class="tooltip-container col-md-4">Use Global Playlist
         <span class="btn-info-icon btn-primary">
             <span class="cp-tooltip">
-                Enable users to add items to a global playlist, accessible through the Media Center Manual Playlist
+                Enable users to add items to a global playlist, accessible through the Media Center Playlists
                 feature.
             </span>
         </span>
@@ -155,14 +155,14 @@
     <label class="tooltip-container col-md-4">Connect Playlist Feature
         <span class="btn-info-icon btn-primary">
             <span class="cp-tooltip">
-                Select the Media Center Manual Playlist feature.
+                Select the Media Center Playlists feature.
             </span>
         </span>
     </label>
     <div class='col-md-9 pull-left'>
         <button id="actionItemAddBtn" ng-class="{'disabled': !Settings.data.content.globalPlaylist}"
             class="btn btn-primary btn-outlined btn-primary-add pull-right" ng-click="Settings.showPluginsDialog()">Add Feature</button>
-        <div id="actionItemAddRow" ng-class="{'disabled': !Settings.data.content.globalPlaylist}" 
+        <div id="actionItemAddRow" ng-class="{'disabled': !Settings.data.content.globalPlaylist}"
             class="hidden flex-auto flex border-grey border-radius-four padding-bottom-five padding-top-five padding-left-ten padding-right-ten">
             <div class="flex flex-auto flex-align-center">
                 <img class="margin-right-five border-radius-four chat-instance-icon"
