fix(details): label rename

--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -221,7 +221,7 @@
 
     <hr class="none">
     <div class="row flex audio-image-selector">
-        <label class="tooltip-container col-md-3">Media Background
+        <label class="tooltip-container col-md-3">Audio Background
             <span class="btn-info-icon btn-primary">
                 <span class="cp-tooltip">
                     Upload a background image that will be displayed as a blurred background in the audio player.
